# url_shortener

./: .gitignore  docker-compose.yaml
backend/: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  coveragerc  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/config/: settings.py  urls.py
backend/env/: .env-default
backend/url_shortener/: admin.py  helpers.py  models.py  serializers.py  urls.py  viewsets.py
backend/url_shortener/migrations/: 0001_initial.py  0002_shorturl_author.py
backend/url_shortener/tests/: test_models.py  test_viewset.py
backend/users/migrations/: 0001_initial.py  0002_superuser.py
